Fix overflow for icons

--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -122,4 +122,7 @@ h1 {
     font-size: 16px;
     line-height: 18px;
   }
+  .cards__wrapper {
+    width: 80%;
+  }
 }
