--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -1,85 +1,83 @@
 /*  import google fonts */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap");
 
 video {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    z-index: -1;
-  }
-  
-  .hero-container {
-    /* background: url('/src/images/img-home.jpg') 
-    center center/cover no-repeat; */
-    color: white;
-    height: 105vh;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: left;
-    align-items: left;
-    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
-    object-fit: contain;
-    font-family: 'Ubuntu', sans-serif;
-  } 
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: -1;
+}
 
-.hero-container .max-width{
+.hero-container {
+  color: white;
+  height: 105vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: left;
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+  object-fit: contain;
+  font-family: "Ubuntu", sans-serif;
+}
+
+.hero-container .max-width {
   margin: auto 0 auto 30px;
   padding-bottom: 100px;
 }
-.text-1{
+.text-1 {
   font-size: 30px;
 }
-.text-2{
+.text-2 {
   font-size: 110px;
   font-weight: 600;
   margin-left: -3px;
 }
-.text-3{
+.text-3 {
   font-size: 40px;
   margin: 5px 0;
 }
-  
-  .fa-play-circle {
-    margin-left: 4px;
+
+.fa-play-circle {
+  margin-left: 4px;
+}
+
+@media screen and (max-width: 960px) {
+  .hero-container > h1 {
+    font-size: 70px;
+    margin-top: -100px;
   }
-  
-  @media screen and (max-width: 960px) {
-    .hero-container > h1 {
-      font-size: 70px;
-      margin-top: -100px;
-    }
-  }
-  
-  @media screen and (max-width: 768px) {
-    .hero-container > h1 {
-      font-size: 50px;
-      margin-top: -100px;
-    }
-  
-    .hero-container > p {
-      font-size: 30px;
-    }
-  
-    .btn-mobile {
-      display: block;
-      text-decoration: none;
-    }
-  
-    .btn {
-      width: 100%;
-    }
+}
+
+@media screen and (max-width: 768px) {
+  .hero-container > h1 {
+    font-size: 50px;
+    margin-top: -100px;
   }
 
-  @media (max-width: 500px) {
-    .text-1 {
-      font-size: 20px;
-    }
-    .text-2 {
-        font-size: 50px;
-    }
-    .text-3 {
-        font-size: 27px;
-    }
+  .hero-container > p {
+    font-size: 30px;
   }
+
+  .btn-mobile {
+    display: block;
+    text-decoration: none;
+  }
+
+  .btn {
+    width: 100%;
+  }
+}
+
+@media (max-width: 500px) {
+  .text-1 {
+    font-size: 20px;
+  }
+  .text-2 {
+    font-size: 50px;
+  }
+  .text-3 {
+    font-size: 27px;
+  }
+}
