--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -1,153 +1,158 @@
 .skills {
-    background: #fff;
-    padding: 50px 0;
-    height: 100%;
+  background: #fff;
+  padding: 50px 0;
+  height: 100%;
 }
 
 .skills .skills-content {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .skills .skills-content .column {
-    width: calc(50% - 30px);
+  width: calc(50% - 30px);
 }
 
 .skills .skills-content .left .text {
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 10px;
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 10px;
 }
 
-.skills .skills-content .left p{
-    text-align: justify;
-    font-family: 'Poppins', sans-serif;
+.skills .skills-content .left p {
+  text-align: justify;
+  font-family: "Poppins", sans-serif;
 }
 
-.skills .skills-content .left a{
-    display: inline-block;
-    background: crimson;
-    color: #fff;
-    font-size: 18px;
-    font-weight: 500;
-    padding: 8px 16px;
-    margin-top: 20px;
-    border-radius: 6px;
-    border: 2px solid crimson;
-    transition: all 0.3s ease;
+.skills .skills-content .left a {
+  display: inline-block;
+  background: crimson;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 8px 16px;
+  margin-top: 20px;
+  border-radius: 6px;
+  border: 2px solid crimson;
+  transition: all 0.3s ease;
 }
 
-.skills .skills-content .left a:hover{
-    color: crimson;
-    background: none;
+.skills .skills-content .left a:hover {
+  color: crimson;
+  background: none;
 }
 
-.skills .skills-content .right .bars{
-    margin-bottom: 15px;
+.skills .skills-content .right .bars {
+  margin-bottom: 15px;
 }
 
-.skills .skills-content .right .info{
-    display: flex;
-    margin-bottom: 5px;
-    align-items: center;
-    justify-content: space-between;
+.skills .skills-content .right .info {
+  display: flex;
+  margin-bottom: 5px;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.skills .skills-content .right span{
-    font-weight: 500;
-    font-size: 18px;
+.skills .skills-content .right span {
+  font-weight: 500;
+  font-size: 18px;
 }
 
-.skills .skills-content .right .line{
-    height: 10px;
-    border-radius: 6px;
-    width: 100%;
-    background: lightgrey;
-    position: relative;
+.skills .skills-content .right .line {
+  height: 10px;
+  border-radius: 6px;
+  width: 100%;
+  background: lightgrey;
+  position: relative;
 }
 
-.skills .skills-content .right .line::before{
-    content: "";
-    position: absolute;
-    height: 100%;
-    left: 0;
-    top: 0;
-    background: crimson;
-    border-radius: 6px;
+.skills .skills-content .right .line::before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: crimson;
+  border-radius: 6px;
 }
 
-.skills-content .right .java::before{
-    width: 80%;
+.skills-content .right .java::before {
+  width: 80%;
 }
-.skills-content .right .js::before{
-    width: 70%;
+.skills-content .right .js::before {
+  width: 70%;
 }
-.skills-content .right .python::before{
-    width: 85%;
+.skills-content .right .python::before {
+  width: 85%;
 }
-.skills-content .right .html::before{
-    width: 50%;
+.skills-content .right .html::before {
+  width: 50%;
 }
-.skills-content .right .css::before{
-    width: 50%;
+.skills-content .right .css::before {
+  width: 50%;
 }
 
-.icons-gallery {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
+.icons-gallery-top {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+.icons-gallery-bottom {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
 }
 
 .icon-style {
-    margin: auto 0 auto 20px;
-    color: black;
-    font-size: 60px;
+  margin: auto 0 auto 20px;
+  color: black;
+  font-size: 60px;
 }
 
 .on-hover {
-    visibility: hidden;
-    font-size: 12px;
-    text-align: center;
-    opacity:0;
-    transition:visibility 0.3s linear,opacity 0.3s linear;
+  visibility: hidden;
+  font-size: 12px;
+  text-align: center;
+  opacity: 0;
+  transition: visibility 0.3s linear, opacity 0.3s linear;
 }
 
-.icon-style :hover ~ .on-hover{
-    opacity:1;
-    visibility: visible;
+.icon-style :hover ~ .on-hover {
+  opacity: 1;
+  visibility: visible;
 }
 
 @media (max-width: 690px) {
-    .max-width{
-        padding: 0 23px;
-    }
+  .max-width {
+    padding: 0 23px;
+  }
 }
 
 @media (max-width: 991px) {
-    .max-width{
-        padding: 0 50px;
-    }
+  .max-width {
+    padding: 0 50px;
+  }
 }
 
-@media (max-width: 947px){
-    .skills .skills-content .column{
-            width: 100%;
-            margin-bottom: 35px;
-
-    }
+@media (max-width: 947px) {
+  .skills .skills-content .column {
+    width: 100%;
+    margin-bottom: 35px;
+  }
 }
 
 @media (max-width: 500px) {
-    .skills .skills-content .left .text{
-        font-size: 19px;
-    }
-    .icon-style {
-        font-size: 40px;
-    }
-    .on-hover {
-        font-size: 8px;
-    }
+  .skills .skills-content .left .text {
+    font-size: 19px;
+  }
+  .icon-style {
+    font-size: 40px;
+  }
+  .on-hover {
+    font-size: 8px;
+  }
 }
